--- a/scss/menu/_mixins.scss
+++ b/scss/menu/_mixins.scss
@@ -1,56 +1,8 @@
-/*
-| Menu |
-
-Using before global container of content
-* Exemple *
-<body>
-    <div class="menu">
-        <div class="menu__bar">
-            <div class="bar-content">
-                {{ Menu content }}
-            </div>
-        </div>
-    </div>
-
-    <div class="global">
-        {{ Site content }}
-    </div>
-</body>
-*/
-
-// *** Import ***
-
-
-// *** Variables ***
-
-// Dark pad
-$menu-z-index: 99;
-$menu-background: rgba(20, 20, 20, 0.3);
-$menu-transition: all;
-$menu-transition-speed: 0.7s;
-$menu-transition-type: ease-out;
-
-// Menu bar
-$menu__bar-width: 250px;
-$menu__bar-border-value: 1px solid;
-$menu__bar-border-color: rgba(0, 0, 0, 0.4);
-$menu__bar-background: rgba(236, 240, 241, 1.0);
-$menu__bar-transition: all;
-$menu__bar-transition-speed: 0.4s;
-$menu__bar-transition-type: ease-out;
-$menu__bar-box-shadow-value: -10px 0 30px 0;
-$menu__bar-box-shadow-color: rgba(124, 252, 0, 0.7);
-
-// Just a website
-$global__menu-translate: -250px;
-$global__menu-filter-value: 3px;
-$global__menu-filter: blur($global__menu-filter-value);
-
-// For mixins
-$menu__bar-border-left: false;
-$menu__bar-box-shadow: false;
+// *** Import
+@import "_variables";
 
 // *** Mixins ***
+
 @mixin menu-transition() {
     -webkit-transition: $menu-transition $menu-transition-speed $menu-transition-type;
        -moz-transition: $menu-transition $menu-transition-speed $menu-transition-type;
@@ -131,50 +83,4 @@ $menu__bar-box-shadow: false;
         -ms-filter: $global__menu-filter;
          -o-filter: $global__menu-filter;
             filter: $global__menu-filter;
-}
-
-// *** Styles ***
-.menu {
-    z-index: $menu-z-index;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: $menu-background;
-    visibility: hidden;
-    opacity: 0;
-    @include menu-transition();
-
-    &.active {
-        visibility: visible;
-        opacity: 1;
-    }
-
-    .menu__bar {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        width: $menu__bar-width;
-        background: $menu__bar-background;
-        @include menu__bar-transition();
-        @include menu__bar-transform();
-        @include menu__bar-border-left(false);
-        @include menu__bar-box-shadow(false);
-
-        &.active {
-            @include menu__bar-active();
-        }
-    }
-}
-
-.global {
-    width: 100%;
-    @include global-transition();
-
-    &.menu-active {
-        @include global__menu-filter();
-        @include global-transform-menu-active();
-    }
 }
