--- a/scss/menu/_variables.scss
+++ b/scss/menu/_variables.scss
@@ -26,3 +26,4 @@ $global__menu-filter: blur($global__menu-filter-value);
 // For mixins
 $menu__bar-border-left: true;
 $menu__bar-box-shadow: true;
+$transform-gpu: false;
