--- a/scss/menu/_variables.scss
+++ b/scss/menu/_variables.scss
@@ -18,12 +18,12 @@ $menu__bar-transition-type: ease-out;
 $menu__bar-box-shadow-value: -10px 0 30px 0;
 $menu__bar-box-shadow-color: rgba(255, 51, 71, 0.7);
 
-// Just a website
+// Global container
 $global__menu-translate: -250px;
 $global__menu-filter-value: 3px;
 $global__menu-filter: blur($global__menu-filter-value);
 
 // For mixins
-$menu__bar-border-left: true;
-$menu__bar-box-shadow: true;
+$menu__bar-border-left: false;
+$menu__bar-box-shadow: false;
 $transform-gpu: false;
