--- a/scss/menu/_variables.scss
+++ b/scss/menu/_variables.scss
@@ -8,7 +8,7 @@ $menu-transition-speed: 0.7s;
 $menu-transition-type: ease-out;
 
 // Menu bar
-$menu__bar-width: 250px;
+$menu__bar-width: 40vw;
 $menu__bar-border-value: 1px solid;
 $menu__bar-border-color: rgba(0, 0, 0, 0.4);
 $menu__bar-background: rgba(236, 240, 241, 1.0);
@@ -19,11 +19,12 @@ $menu__bar-box-shadow-value: -10px 0 30px 0;
 $menu__bar-box-shadow-color: rgba(255, 51, 71, 0.7);
 
 // Global container
-$global-translate: -250px;
+$global-translate: -1 * $menu__bar-width;
 $global-filter-value: 3px;
 $global-filter: blur($global-filter-value);
 
 // Parameters
+$coupled-menu: false;
 $menu-background-use: false;
 $menu__bar-border-left: true;
 $menu__bar-box-shadow: false;
