Menu width change

--- a/scss/menu/_variables.scss
+++ b/scss/menu/_variables.scss
@@ -8,7 +8,7 @@ $menu-transition-speed: 0.7s;
 $menu-transition-type: ease-out;
 
 // Menu bar
-$menu__bar-width: 40vw;
+$menu__bar-width: 350px;
 $menu__bar-border-value: 1px solid;
 $menu__bar-border-color: rgba(0, 0, 0, 0.4);
 $menu__bar-background: rgba(236, 240, 241, 1.0);
